--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/default.jpg</file>
+        <file>images/default/default.jpg</file>
+        <file>images/default/defaultbomb.jpg</file>
     </qresource>
 </RCC>
