Added empty tile, changed up defaultbomb image, made recursive tile reveal, was crashing, but fixed that after making sure only already revealed tiles weren't being recursively checked

--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>images/default/default.jpg</file>
         <file>images/default/defaultbomb.jpg</file>
+        <file>images/default/defaultempty.jpg</file>
     </qresource>
 </RCC>
